Fixed button spacing and sizes on search bar and results tab

--- a/styles/style.css
+++ b/styles/style.css
@@ -3,11 +3,11 @@
   }
   
   @media(min-width:960px){
-    #output .col-md-4 .well{
+    #output .col-md-3 .well{
       height: 390px;
     }
   
-    #output .col-md-4 img{
+    #output .col-md-3 img{
       height:240px;
     }
   }
